c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/at_sign.c
/* The @ symbol doesn't appear in any C tokens,
   except inside string or character literals. */
int main(void) {
    return 0@1;
}